--- a/WeeklyLogs/Log061525_062125.md
+++ b/WeeklyLogs/Log061525_062125.md
@@ -13,8 +13,8 @@
 Figure 1: Momentum balance for location between GH_T09 and GH_T10 (near mouth of Grays Harbor).
 
 #### dvdt
-- As tides reach lows (LLW, LHW), dvdt reaches a max (+) velocity (landward flow)
-- As tides reach highs (HHW, HLW), dvdt reaches a minimium (-) velocity (seaward flow)
+- As tides reach lows (LLW, LHW), dvdt reaches a max change in velocity (+) (landward flow)
+- As tides reach highs (HHW, HLW), dvdt reaches a min change in velocity (-) (seaward flow)
 - dvdt lags behind velocity by ~160 minutes (2h40m)
 - dvdt reaches 0 at highs and lows of tides (which makes sense) (Fig. 2)
 - Velocity lags behind eta by ~160 minutes (2h40m)
@@ -24,7 +24,7 @@ Figure 2: Eta, dvdt, and velocity for location between GH_T09 and GH_T10.
 
 
 #### Advection
-- Advection term oscillates around near 0 except for transitions between LHW/LLW and LLW/HHW
+- Advection term oscillates around near 0 except for transitions between LHW/LLW and LLW/HHW, where term becomes more negative
 - Mostly balances friction term except for the falling tide between LHW and LLW
 	- During this time, advection is balanced mostly by PGF
 - Water levels lag ~2 hours behind velocity (water levels reach max/min ~2 hours after max/min velocities)
@@ -32,11 +32,12 @@ Figure 2: Eta, dvdt, and velocity for location between GH_T09 and GH_T10.
 
 
 #### PGF
-- As tides rise, PGF increases
-	- deta/dy < 0 (upstream eta > downstream eta)
+- As tides rise, PGF decreases
+	- deta/dy > 0 (upstream eta > downstream eta)
+	- PGF < 0
+- As tides fall, PGF increases
+	- deta/dy < 0 (upstream eta < downstream eta)
 	- PGF > 0
-- As tides fall, PGF decreases
-	- deta/dy > 0 (upstream eta < downstream eta)
 - Follows/balances dvdt on the rising tides, but diverges on the falling tides
 
 
