--- a/WeeklyLogs/Log062225_062825.md
+++ b/WeeklyLogs/Log062225_062825.md
@@ -17,71 +17,68 @@
 Figure 1: Momentum balance for station between GH_T09/GH_T10 for one tidal cycle.
 
 #### dv/dt (Fig. 2)
-	- dv/dt = 0: velocity reaches peak (max/min)
-	- dv/dt > 0: velocity is increasing over time (during rising portion)
-	- dv/dt < 0: velocity is decreasing over time (after reaching peak velocity)
-	- LLW to LHW:
-		- As dv/dt decreases towards 0, it reaches a max peak onshore velocity during rising tide
-		- dv/dt continues to become more negative as velocity begins to switch direction
-	- LHW to HLW:
-		- As dv/dt increases towards 0 velocity approaches peak offshore flow
-		- dv/dt continues to become more positive as velocity begins to switch direction and become more onshore flow
-	- HLW to HHW:
-		- As dv/dt decreases toward 0 velocity, it reaches a max peak onshore velocity during this shorter rising tide
-		- dv/dt continues to become more negative as velocity begins to switch direction for an offshore flow
-	- HHW to LLW: 
-		- As dv/dt increases toward 0 velocity, it approaches peak offshore flow (much more negative than the previous falling tide)
-		- dv/dt continues to become more positive as velocity begins to switch direction for an onshore flow for the next cycle
+- dv/dt = 0: velocity reaches peak (max/min)
+- dv/dt > 0: velocity is increasing over time (during rising portion)
+- dv/dt < 0: velocity is decreasing over time (after reaching peak velocity)
+- LLW to LHW:
+	- As dv/dt decreases towards 0, it reaches a max peak onshore velocity during rising tide
+	- dv/dt continues to become more negative as velocity begins to switch direction
+- LHW to HLW:
+	- As dv/dt increases towards 0 velocity approaches peak offshore flow
+	- dv/dt continues to become more positive as velocity begins to switch direction and become more onshore flow
+- HLW to HHW:
+	- As dv/dt decreases toward 0 velocity, it reaches a max peak onshore velocity during this shorter rising tide
+	- dv/dt continues to become more negative as velocity begins to switch direction for an offshore flow
+- HHW to LLW: 
+	- As dv/dt increases toward 0 velocity, it approaches peak offshore flow (much more negative than the previous falling tide)
+	- dv/dt continues to become more positive as velocity begins to switch direction for an onshore flow for the next cycle
 
 ![dvdt](../Figures/062625meeting/tidalcycles_dvdt_ght09_ght10.png)<br>
 Figure 2: dvdt for different tidal stages.
 
-#### Advection
-	- |vel(GH_09)| > |vel(GH_10)| during peak velocities
-		- During flood (rising) tide, velocity decelerates as flow moves onshore 
-		- During ebb (falling) tide, velocity accelerates as flow moves offshore
-	- Peak flow lags behind peak water levels
-		- Flow reversal ~2/3 through the tidal stage
+#### Advection (Fig. 3)
+- |vel(GH_09)| > |vel(GH_10)| during peak velocities
+	- During flood (rising) tide, velocity decelerates as flow moves onshore 
+	- During ebb (falling) tide, velocity accelerates as flow moves offshore
+- Peak flow lags behind peak water levels
+	- Flow reversal ~2/3 through the tidal stage
 
 ![adv](../Figures/062625meeting/tidalcycles_vel_ght09_ght10.png)<br>
 Figure 3: Velocity for different tidal stages at GH_T09 and GH_T10.
 
-#### PGF
-	- PGF > 0: eta (GH_09) > eta (GH_10)
-	- PGF < 0: eta (GH_09) < eta (GH_10)
-	- For majority of rising tides (and tails of falling tides), PGF > 0
-		- eta upstream is higher than downstream (water levels tilt up upstream)
-	For majority of falling tides (and tails of rising tides), PGF < 0
-		- eta upstream is lower than downstream (water levels tilt down downstream)
-	- PGF has lag response to velocity (bc function of water levels which also lag velocity)
+#### PGF (Fig. 4)
+- PGF > 0: eta (GH_09) > eta (GH_10)
+- PGF < 0: eta (GH_09) < eta (GH_10)
+- For majority of rising tides (and tails of falling tides), PGF > 0
+	- eta upstream is higher than downstream (water levels tilt up upstream)
+- For majority of falling tides (and tails of rising tides), PGF < 0
+	- eta upstream is lower than downstream (water levels tilt down downstream)
+- PGF has lag response to velocity (bc function of water levels which also lag velocity)
 
 ![pgf](../Figures/062625meeting/tidalcycles_pgf_ght09_ght10.png)<br>
-Figure 3: PGF for different tidal stages at GH_T09 and GH_T10.
+Figure 4: PGF for different tidal stages at GH_T09 and GH_T10.
 
 #### Friction
-	- Mirror image of velocity (function of velocity and Chezys)
+- Mirror image of velocity (function of velocity and Chezys)
 
 ![tau](../Figures/062625meeting/dfm_tau.png)<br>
 
 
 #### Additional notes
-	- Rising tidal stages:
-		- dv/dt = 0 when velocity reaches maximum
-	- PGF and dvdt becomes first order right after end of each tidal stage
-		- Max tilt between stations
-	- PGF and friction dominate/become first order during HHW to LLW tidal stage
-		- Velocity magnitude is much greater than other tidal stages due to larger surface tilt
-	- Friction
+- Rising tidal stages:
+	- dv/dt = 0 when velocity reaches maximum
+- PGF and dvdt becomes first order right after end of each tidal stage
+	- Max tilt between stations
+- PGF and friction dominate/become first order during HHW to LLW tidal stage
+	- Velocity magnitude is much greater than other tidal stages due to larger surface tilt
+- Friction
+
+
 
 
 ### 2) GH_T51/GH_T52 momentum balance
 - Created 6 cross-channel observation points and calculated momentum budget using different approaches
 
-
-
-
-![etadvdtvel_ght09ght10](../Figures/062625meeting/.png)<br
-Figure 2: 
 
 
 
