--- a/WeeklyLogs/Log062225_062825.md
+++ b/WeeklyLogs/Log062225_062825.md
@@ -58,10 +58,12 @@ Figure 3: Velocity for different tidal stages at GH_T09 and GH_T10.
 ![pgf](../Figures/062625meeting/tidalcycles_pgf_ght09_ght10.png)<br>
 Figure 4: PGF for different tidal stages at GH_T09 and GH_T10.
 
-#### Friction
+#### Friction (Fig. 5)
 - Mirror image of velocity (function of velocity and Chezys)
 
 ![tau](../Figures/062625meeting/dfm_tau.png)<br>
+![pgf](../Figures/062625meeting/tidalcycles_friction_ght09_ght10.png)<br>
+Figure 5: Friction for different tidal stages at GH_T09 and GH_T10.
 
 
 #### Additional notes
@@ -71,13 +73,33 @@ Figure 4: PGF for different tidal stages at GH_T09 and GH_T10.
 	- Max tilt between stations
 - PGF and friction dominate/become first order during HHW to LLW tidal stage
 	- Velocity magnitude is much greater than other tidal stages due to larger surface tilt
-- Friction
-
 
 
 
 ### 2) GH_T51/GH_T52 momentum balance
 - Created 6 cross-channel observation points and calculated momentum budget using different approaches
+
+![googlemap](../Figures/062625meeting/gh_51_515_52_locations.png)
+
+- Added velx (vdv/dx) and taux components to y-momentum budget
+
+![momentumbudgetequation](../Figures/062625meeting/momentumbalance_equation.png)
+
+- Calculated cross-sectionally averaged momentum budget (Fig. 6)
+
+![momentumbalanceequation_crs_avg](../Figures/062625meeting/momentumbalance_ght51_ght52_crossectionavg.png)
+
+![momentumbalance_crs_avg](../Figures/062625meeting/momentumbalance_ght51_ght52_crs_avg.png)
+Figure 6: Momentum balance using cross sectionally averaged values along GH_T51 and GH_T52 for calculating at GH_T51.5.
+
+
+- More localized approach calculating momentum balance between GH_T51b, GH_T51.5b, and GH_T52b (Fig. 7)
+	- For calculating dvdx, used velocities between GH_T51.5c and GH_T51.5a
+	- Much better balance but higher residuals due to peaks in calculated friction
+
+![momentumbalance_t51b](../Figures/062625meeting/momentumbalance_ght51b_ght52b.png)
+Figure 7: Momentum balance between GH_T51b and GH_T52b for calculating at GH_T51.5b.
+
 
 
 
