--- a/WeeklyLogs/Log062225_062825.md
+++ b/WeeklyLogs/Log062225_062825.md
@@ -94,14 +94,15 @@ Figure 6: Momentum balance using cross sectionally averaged values along GH_T51 
 
 
 - More localized approach calculating momentum balance between GH_T51b, GH_T51.5b, and GH_T52b (Fig. 7)
+	- Found calculations for "b" points to yield the smallest residuals
 	- For calculating dvdx, used velocities between GH_T51.5c and GH_T51.5a
-	- Much better balance but higher residuals due to peaks in calculated friction
+	- During compound flooding event, large balance between pressure and friction (with advection as secondary)
+	- Much better balance but higher residuals due to large imbalance between pressure and friction
 
 ![momentumbalance_t51b](../Figures/062625meeting/momentumbalance_ght51b_ght52b.png)
 Figure 7: Momentum balance between GH_T51b and GH_T52b for calculating at GH_T51.5b.
 
 
 
-
-
 ## Next steps:
+- Test same cross section approach with GH_T09 and GH_T10 stations to minimize residuals and verify that additional components are calculated correctly
