--- a/WeeklyLogs/Log062225_062825.md
+++ b/WeeklyLogs/Log062225_062825.md
@@ -106,3 +106,4 @@ Figure 7: Momentum balance between GH_T51b and GH_T52b for calculating at GH_T51
 
 ## Next steps:
 - Test same cross section approach with GH_T09 and GH_T10 stations to minimize residuals and verify that additional components are calculated correctly
+- Continue analysis of GH_T09/GH_T10 budget
