--- a/WeeklyLogs/Log062225_062825.md
+++ b/WeeklyLogs/Log062225_062825.md
@@ -101,6 +101,7 @@ Figure 6: Momentum balance using cross sectionally averaged values along GH_T51 
 
 ![momentumbalance_t51b](../Figures/062625meeting/momentumbalance_ght51b_ght52b.png)
 Figure 7: Momentum balance between GH_T51b and GH_T52b for calculating at GH_T51.5b. 
+Asdflkj;
 
 
 
