--- a/WeeklyLogs/Log062925_070525.md
+++ b/WeeklyLogs/Log062925_070525.md
@@ -14,6 +14,8 @@
 #### Test 1
 - Using cross section average values for GH_T51, GH_T51.5, and GH_T52 (Fig. 1)
 - Removing points a and f from GH_T51 helped reduce spikes, but still have large residual during flood (Fig. 3)
+- Removing points GH_T51a and GH_T51f for eta balances PGF
+- Does relatively okay job except for during flood event.
 
 ![test1_eq](../Figures/070325meeting/momentumbalance_equation_test1.png)
 
@@ -21,15 +23,32 @@
 Figure 1: Momentum budget for "Test #1" (with GH_T51a/f removed).
 
 
+
 #### Test 2
-- Using GH_T51.5c as center points (Fig. 
+- Using GH_T51.5c as center points (Fig. 2)
 - Not accurate since I'm using a single point value for calculations
-- Would be better to use cross-sectionally average for some of the terms (e.g. PGF, bedstress, etc) 
-- Still spikes, but residuals are mostly <1
+- Would be better to use cross-sectionally average for some of the terms? (e.g. PGF, bedstress, etc) 
+- Friction much larger than Test #1, causing larger negative residuals
+- Still spikes, but residuals are mostly <1 and looks better during the flood event
+
+![test2_eq](../Figures/070325meeting/momentumbalance_equation_test2.png)
+
+![test2_adj](../Figures/070325meeting/momentumbalance_ght51_ght52_test2.png)
+Figure 2: Momentum budget for "Test #2".
+
+
 
 #### Test 3
 - Similar to Test 2, but setting d/dx more locally
 	- Set d/dx as derivative between GH_T51.5b and GH_T51.5d instead of calculating from GH_T51a to GH_T51.5f (setting local)
+- Decreases the residual during flood event
+	- Still has larger residual spike prior to flood than Test #1 b/c larger friction
+
+![test3_eq](../Figures/070325meeting/momentumbalance_equation_test3.png)
+
+![test3_adj](../Figures/070325meeting/momentumbalance_ght51_ght52_test3.png)
+Figure 3: Momentum budget for "Test #3".
+
 
 
 #### Test 4
@@ -38,9 +57,22 @@ Figure 1: Momentum budget for "Test #1" (with GH_T51a/f removed).
 	- Driven mostly by higher friction
 - Can minimize spikes by using GH_T51.5c for friction calculations, but won't be consistent
 
+![test4_eq](../Figures/070325meeting/momentumbalance_equation_test4.png)
+
+![test4_adj](../Figures/070325meeting/momentumbalance_ght51_ght52_test4.png)
+Figure 4: Momentum budget for "Test #4".
+
 
 #### Test 5
-- 
+- Using cross section average for all terms except for d/dx
+	- Localized d/dx from GH_T51.5b to GH_T51.5d for smallest residual
+- Gives great results prior to flood, but has large-ish residual during flood event
+
+
+![test5_eq](../Figures/070325meeting/momentumbalance_equation_test5.png)
+
+![test5_adj](../Figures/070325meeting/momentumbalance_ght51_ght52_test5.png)
+Figure 5: Momentum budget for "Test #5".
 
 
 Issues:
@@ -48,14 +80,16 @@ Issues:
 	- Average of rotated u- and v-direction bottom stress between GH_T51 and GH_T52 not matching with new midsection values
 	- Streamwise bottom friction is ~50% larger during flood
 	- Streamnormal is much much larger and variable
+	- This is because GH_T51 is equivalent to GH_T51b, while GH_T52 is equivalent to GH_T52e 
+	- Using GH_T51/GH_T52 average can skew values
 
 
 Fixes:
 - Using GH_T52_avg and GH_T51_avg for PGF gives a larger value which causes spikes (Test 5)
-	- Using GH_T52b and GH_T51b generates a smaller PGF which decreases the magnitude of the spikes
-	- Using GH_T52c and GH_T51c is roughly the same as GH_T52b and GH_T51b
+	- Removing GH_T51a/f from GH_T51_avg creates much better PGF values
+	- Using GH_T52b and GH_T51b generates a smaller PGF which decreases the magnitude of the spikes (alternative)
 - Using GH_T51a and GH_T51f (which is dry on low tide) increases friction significantly, causing spikes in residuals
-
+	- Removing GH_T51a/f gives better average values
 
 
 To do:
