--- a/WeeklyLogs/Log062925_070525.md
+++ b/WeeklyLogs/Log062925_070525.md
@@ -1,7 +1,7 @@
 # June 29 - July 05, 2025
 
 ## Summary:
-1) Local momentum balance (GH_T51/GH_T52)
+* Local momentum balance (GH_T51/GH_T52)
 
 ## Results:
 ### 1) GH_T51/GH_T52 momentum budget
@@ -11,7 +11,7 @@
 
 ![googlemap](../Figures/062625meeting/gh_51_515_52_locations.png)
 
-#### Test 1
+### Test 1
 - Using cross section average values for GH_T51, GH_T51.5, and GH_T52 (Fig. 1)
 - Removing points a and f from GH_T51 helped reduce spikes, but still have large residual during flood (Fig. 3)
 - Removing points GH_T51a and GH_T51f for eta balances PGF
@@ -23,8 +23,7 @@
 Figure 1: Momentum budget for "Test #1" (with GH_T51a/f removed).
 
 
-
-#### Test 2
+### Test 2
 - Using GH_T51.5c as center points (Fig. 2)
 - Not accurate since I'm using a single point value for calculations
 - Would be better to use cross-sectionally average for some of the terms? (e.g. PGF, bedstress, etc) 
@@ -37,8 +36,7 @@ Figure 1: Momentum budget for "Test #1" (with GH_T51a/f removed).
 Figure 2: Momentum budget for "Test #2".
 
 
-
-#### Test 3
+### Test 3
 - Similar to Test 2, but setting d/dx more locally
 	- Set d/dx as derivative between GH_T51.5b and GH_T51.5d instead of calculating from GH_T51a to GH_T51.5f (setting local)
 - Decreases the residual during flood event
@@ -50,8 +48,7 @@ Figure 2: Momentum budget for "Test #2".
 Figure 3: Momentum budget for "Test #3".
 
 
-
-#### Test 4
+### Test 4
 - Centering around GH_T51b instead
 - Works the best at balancing during flood event, but still have large spikes prior to flood
 	- Driven mostly by higher friction
@@ -63,7 +60,7 @@ Figure 3: Momentum budget for "Test #3".
 Figure 4: Momentum budget for "Test #4".
 
 
-#### Test 5
+### Test 5
 - Using cross section average for all terms except for d/dx
 	- Localized d/dx from GH_T51.5b to GH_T51.5d for smallest residual
 - Gives great results prior to flood, but has large-ish residual during flood event
@@ -75,7 +72,7 @@ Figure 4: Momentum budget for "Test #4".
 Figure 5: Momentum budget for "Test #5".
 
 
-Issues:
+## Issues:
 - Bottom stress
 	- Average of rotated u- and v-direction bottom stress between GH_T51 and GH_T52 not matching with new midsection values
 	- Streamwise bottom friction is ~50% larger during flood
@@ -84,7 +81,7 @@ Issues:
 	- Using GH_T51/GH_T52 average can skew values
 
 
-Fixes:
+## Fixes:
 - Using GH_T52_avg and GH_T51_avg for PGF gives a larger value which causes spikes (Test 5)
 	- Removing GH_T51a/f from GH_T51_avg creates much better PGF values
 	- Using GH_T52b and GH_T51b generates a smaller PGF which decreases the magnitude of the spikes (alternative)
@@ -92,5 +89,6 @@ Fixes:
 	- Removing GH_T51a/f gives better average values
 
 
-To do:
+## To do:
 - Continue playing around with combinations of stations to close budget
+- For calculating all along channel momentum balance for all stations, does that mean I need to add in cross section points for every kilometer?
