--- a/WeeklyLogs/Log070625_071225.md
+++ b/WeeklyLogs/Log070625_071225.md
@@ -28,7 +28,8 @@
 - Would tau be averaged over the entire bed?
 
 
-## Next steps (if I'm on the right track):
+## Next steps:
+- Looking at equations, I'll most likely need to sit down with someone to work this through...
 - Need to adjust equation to include:
 	- Bed level
 	- Floodplains (maybe)
