--- a/WeeklyLogs/Log070625_071225.md
+++ b/WeeklyLogs/Log070625_071225.md
@@ -4,6 +4,32 @@
 * Worked on writing out force balance equation for simple river channel section and another one with varying width.
 
 ## Results:
+### Reynolds Transport theorem (steady flow)
+- Assume steady state
+- Comes out to be balanced in/out
+
+![force_balance_01_redo](../Figures/071025meeting/force_balance_01_redo.png)
+
+### Reynolds Transport theorem (unsteady flow)
+- 
+
+
+## Questions:
+- Should there be a storage term (rho*Q*u)?
+- Would tau be averaged over the entire bed?
+
+
+## Next steps:
+- Looking at equations, I'll most likely need to sit down with someone to work this through...
+- Need to adjust equation to include:
+	- Bed level
+	- Floodplains (maybe)
+- Derive from Reynolds Transport Theorem?
+
+
+
+
+## Old work (doesn't make sense)
 ### Simple force balance (rectangular channel)
 - Large list of assumptions:
 	- Rectangular channel (b = b_1 = b_2)
@@ -22,15 +48,3 @@
 
 
 ![force_balance_02](../Figures/071025meeting/force_balance_02.png)
-
-## Questions:
-- Should there be a storage term (rho*Q*u)?
-- Would tau be averaged over the entire bed?
-
-
-## Next steps:
-- Looking at equations, I'll most likely need to sit down with someone to work this through...
-- Need to adjust equation to include:
-	- Bed level
-	- Floodplains (maybe)
-- Derive from Reynolds Transport Theorem?
