--- a/WeeklyLogs/Log070625_071225.md
+++ b/WeeklyLogs/Log070625_071225.md
@@ -8,7 +8,7 @@
 - Assume steady state
 - Comes out to be balanced in/out
 
-![force_balance_01_redo](../Figures/071025meeting/force_balance_01_redo.png)
+![force_balance_01_redo](../Figures/071025meeting/force_balance_01_redo.jpg)
 
 ### Reynolds Transport theorem (unsteady flow)
 - 
