--- a/WeeklyLogs/Log070625_071225.md
+++ b/WeeklyLogs/Log070625_071225.md
@@ -11,12 +11,16 @@
 ![force_balance_01_redo](../Figures/071025meeting/force_balance_01_redo.jpg)
 
 ### Reynolds Transport theorem (unsteady flow)
-- 
+- Unsteady flow (Q_in, u_in different than Q_out, u_out)
+- Keep unsteady term that conserves volume
+
+![force_balance_02_redo](../Figures/071025meeting/force_balance_02_redo.png)
 
 
 ## Questions:
 - Should there be a storage term (rho*Q*u)?
 - Would tau be averaged over the entire bed?
+	- How to include bottom stress term into equation
 
 
 ## Next steps:
@@ -24,7 +28,6 @@
 - Need to adjust equation to include:
 	- Bed level
 	- Floodplains (maybe)
-- Derive from Reynolds Transport Theorem?
 
 
 
