--- a/WeeklyLogs/Log071325_071925.md
+++ b/WeeklyLogs/Log071325_071925.md
@@ -18,7 +18,7 @@
 
 ![force_balance](../Figures/071725meeting/forcebalance_equation.png)
 
-* Wetted perimeter equation
+* Wetted perimeter equation </br>
 ![wetted_perimeter](../Figures/071725meeting/wettedperimeter_equation.png)
 
 
