--- a/WeeklyLogs/Log071325_071925.md
+++ b/WeeklyLogs/Log071325_071925.md
@@ -47,6 +47,6 @@ Figure 3: Water levels (top) and force balance terms (bottom).
 
 
 ## Next steps:
-- 
-
+- Smooth velocity, or neglect edge cells to see if that smooths signal
+- Test with GH_T34/GH_T35 cross-sections to see if velocity signal is smoother
 
