--- a/WeeklyLogs/Log072725_080225.md
+++ b/WeeklyLogs/Log072725_080225.md
@@ -3,6 +3,7 @@
 ## Summary:
 * Made adjustments to code and equations to use more output from merged_map file instead of relying on observation points/cross-sections
 	* https://docs.google.com/document/d/1Eg0rbluJZ7KoBvSvie-XAdYaMI1DoPUDk0VO89neMEI/edit?usp=sharing
+* Spent most of time this week coding it up, so didn't do much analysis since I need to do more checks on the code/equations
 * Interpolated control volume to rectangular grid and calculated based on individual cells within control volume to get more accurate calculations 
 	* Summing up calculations instead of using averages (tau_avg, H_avg)
 * Relative to last week's calculations:
