--- a/WeeklyLogs/Log081025_081625.md
+++ b/WeeklyLogs/Log081025_081625.md
@@ -2,7 +2,7 @@
 
 ## Summary:
 * Balance is largely between gravity and pressure forces
-* Tried different interpolating approaches to force balance calculations
+* Tried different interpolating approaches to force balance calculations, but still "large" residual
 * Most terms were relatively unchanged, except for gravity term and pressure forces
 * V2, V3, and V4 refer to tabs in summary document:
 	- https://docs.google.com/document/d/1Eg0rbluJZ7KoBvSvie-XAdYaMI1DoPUDk0VO89neMEI/edit?pli=1&tab=t.jeoa1hw9eb4i
@@ -48,14 +48,15 @@ Figure 9: Gravity term (original).
 
 
 * Takeaways:
-	- Hi
-* Most terms are relatively the same EXCEPT for the gravity term!
-* Using isolated interpolated t49 cross-section brings area lower.
-* Unsteady term doesn't change much
-* Friction term doesn't change much
-* Flux term is straight from cross-section output
-* Pressure term could be wrong due to different area calculated for GH_T49
-* Gravity term doesn't change much
+	- Overall, the balance is largely between the gravity term and pressure forces
+	- During the flood event (~Dec. 06), the magnitude of pressure forces increase and is somewhat balanced by an increase in bed stress
+	- Unsteady term, friction term, and flux term is relatively unchanged with different interpolation methods
+	- Gravity term changes the most as bed slope is calculated differently between the different methods
+	- One potential issue could be related to waterdepths at GH_T49
+		- Calculated cross-sectional area at GH_T49 and GH_T50
+		- Interpolated cross-sectional area at GH_T49 different than DFM output
+		- Interpolated cross-sectional area at GH_T50 relatively similar to DFM output
+		- This could change the pressure term calculation as it is dependent on the interpolated waterdepth (Fig. 10)
 
-
-## To do:
+![areacomparisons](../Figures/081425meeting/areacomparisons_ght49_ght50.png)
+Figure 10: Comparing DFM cross-sectional area output against calculated area from interpolated grid (rectangular).
