--- a/WeeklyLogs/Log081025_081625.md
+++ b/WeeklyLogs/Log081025_081625.md
@@ -60,3 +60,7 @@ Figure 9: Gravity term (original).
 
 ![areacomparisons](../Figures/081425meeting/areacomparisons_ght49_ght50.png)
 Figure 10: Comparing DFM cross-sectional area output against calculated area from interpolated grid (rectangular).
+
+
+To do:
+* OSM abstract
