--- a/WeeklyLogs/Log082425_083025.md
+++ b/WeeklyLogs/Log082425_083025.md
@@ -13,7 +13,9 @@
 	* CV doesn't (accurately) capture overbank flows, leading to a massive pressure term as the entire pressure gradient cannot be accounted for
 * For downstream sections, all terms are on the same order of magnitude (e.g., GH_T34/GH_T35)
 	* With the exception of the gravity term
+* Gravity term is sensitive to CV as inundated areas can include cells with small water depth but large slopes
 
 
 ## Next steps:
 * Expand CV to include flooded areas
+* Filter out cells with small water depths (<0.5m)?
