--- a/WeeklyLogs/Log090725_091325.md
+++ b/WeeklyLogs/Log090725_091325.md
@@ -4,9 +4,9 @@
 1) Compared mass balance terms with different time model time intervals (5min, 10min, 20min)
 	* Increasing the temporal resolution introduces tiny fluctuations, but reduces the residual in the mass balance
 2) Compared cross-sectional discharge/velocity with interpolated discharge/velocity
-	* Interpolated discharge/velocities overestimate DFM output
-	* This translates to mass flux calculations, which lead to large residuals in the total balance
-3) Include northern/southern boundary in mass balance 
+	* Interpolated discharge/velocities are overestimated compared to the DFM output
+	* This translates to the mass flux calculations, which lead to large residuals in the total balance
+3) Include northern/southern boundaries in mass balance 
 	* Does this close mass balance for control volume?
 * How other people interpolate/calculate momentum balance for DFM/unstructured grids?
 
@@ -14,6 +14,7 @@
 ## Results:
 ### 1) Comparing different time intervals (5min, 10min, 20min)
 * Calculations are more spiky but residuals are flatter with increased temporal resolution
+* A
 ![compare_resid](../Figures/091125meeting/massbalance_MR_compare.png)
 Figure 1: Residuals plotted for 5min, 10min, and 20min interval runs.
 
@@ -26,21 +27,17 @@ Figure 2: Comparing DFM discharge output with interpolated discharge (20min).
 ![compare_fluxes](../Figures/091125meeting/massbalance_Mflux_20m.png)
 Figure 3: Comparing mass flux between DFM output and interpolated method (20min).
 
-### 3) Include northern/southern boundary in mass balance
+### 3) Include northern/southern boundaries in mass balance
 * Adding in N/S fluxes for extended CV doesn't change much since N/S fluxes were ~2.5 orders of magnitude smaller than E/W fluxes
 ![compare_Q_boundaries](../Figures/091125meeting/massbalance_Q_compare_boundaries_10m.png)
 Figure 4: Comparing mass flux for E/W boundaries, N/S boundaries, and N/S/E/W boundaries.
 
 * After adding all fluxes, residual is reduced mostly during December 6
-massbalance_combined_allfluxes_10m
+* Note, residuals are at least an order of magnitude smaller than the storage and flux terms
+![compare_Q_boundaries](../Figures/091125meeting/massbalance_combined_allfluxes_10m.png)
+Figure 5: Residuals are reduced around December 6 when considering fluxes from all 4 boundaries. 
 
-
+* 
 
 
 ## Next steps:
-
-
-
-
-![test1_adj](../Figures/070325meeting/momentumbalance_ght51_ght52_test1_adj.png)
-Figure 1: Momentum budget for "Test #1" (with GH_T51a/f removed).
