--- a/WeeklyLogs/Log090725_091325.md
+++ b/WeeklyLogs/Log090725_091325.md
@@ -7,8 +7,7 @@
 	* Interpolated discharge/velocities are overestimated compared to the DFM output
 	* This translates to the mass flux calculations, which lead to large residuals in the total balance
 3) Include northern/southern boundaries in mass balance 
-	* Does this close mass balance for control volume?
-* How other people interpolate/calculate momentum balance for DFM/unstructured grids?
+	* This only reduces the residual on December 6, but a spike is still observed prior
 
 
 ## Results:
@@ -37,7 +36,6 @@ Figure 4: Comparing mass flux for E/W boundaries, N/S boundaries, and N/S/E/W bo
 ![compare_Q_boundaries](../Figures/091125meeting/massbalance_combined_allfluxes_10m.png)
 Figure 5: Residuals are reduced around December 6 when considering fluxes from all 4 boundaries. 
 
-* 
-
 
 ## Next steps:
+
