--- a/WeeklyLogs/Log090725_091325.md
+++ b/WeeklyLogs/Log090725_091325.md
@@ -1,19 +1,18 @@
 # September 07 - 13, 2025
 
 ## Summary+takeaways:
-1) Compared mass balance terms with different time model time intervals (5min, 10min, 20min)
-	* Increasing the temporal resolution introduces tiny fluctuations, but reduces the residual in the mass balance
-2) Compared cross-sectional discharge/velocity with interpolated discharge/velocity
-	* Interpolated discharge/velocities are overestimated compared to the DFM output
-	* This translates to the mass flux calculations, which lead to large residuals in the total balance
-3) Include northern/southern boundaries in mass balance 
+1) Compared mass balance terms with different time model time intervals (5min, 10min, 20min)</br>
+	* Increasing the temporal resolution introduces tiny fluctuations, but reduces the residual in the mass balance</br>
+2) Compared cross-sectional discharge/velocity with interpolated discharge/velocity</br>
+	* Interpolated discharge/velocities are overestimated compared to the DFM output</br>
+	* This translates to the mass flux calculations, which lead to large residuals in the total balance</br>
+3) Include northern/southern boundaries in mass balance </br>
 	* This only reduces the residual on December 6, but a spike is still observed prior
 
 
 ## Results:
 ### 1) Comparing different time intervals (5min, 10min, 20min)
 * Calculations are more spiky but residuals are flatter with increased temporal resolution
-* A
 ![compare_resid](../Figures/091125meeting/massbalance_MR_compare.png)
 Figure 1: Residuals plotted for 5min, 10min, and 20min interval runs.
 
