--- a/WeeklyLogs/Log090725_091325.md
+++ b/WeeklyLogs/Log090725_091325.md
@@ -6,6 +6,7 @@
 2) Compared cross-sectional discharge/velocity with interpolated discharge/velocity</br>
 	* Interpolated discharge/velocities are overestimated compared to the DFM output</br>
 	* This translates to the mass flux calculations, which lead to large residuals in the total balance</br>
+	* This can then translate to momentum flux calculations in force balance approach and lead to interpolation errors
 3) Include northern/southern boundaries in mass balance </br>
 	* This only reduces the residual on December 6, but a spike is still observed prior
 
@@ -37,4 +38,6 @@ Figure 5: Residuals are reduced around December 6 when considering fluxes from a
 
 
 ## Next steps:
-
+* Compare differences in residuals in 5m and 20m model runs
+* Calculate mass balance for original CV (mostly channel)
+	* The northern boundary definitely has water flowing northward during the flood period, but is it more balanced than the expanded CV?
