--- a/WeeklyLogs/Log090725_091325.md
+++ b/WeeklyLogs/Log090725_091325.md
@@ -10,6 +10,9 @@
 3) Include northern/southern boundaries in mass balance </br>
 	* This only reduces the residual on December 6, but a spike is still observed prior
 
+* Mass balance document:
+	* https://docs.google.com/document/d/1Eg0rbluJZ7KoBvSvie-XAdYaMI1DoPUDk0VO89neMEI/edit?pli=1&tab=t.564jkczf4cqj
+
 
 ## Results:
 ### 1) Comparing different time intervals (5min, 10min, 20min)
