--- a/WeeklyLogs/Log090725_091325.md
+++ b/WeeklyLogs/Log090725_091325.md
@@ -44,3 +44,6 @@ Figure 5: Residuals are reduced around December 6 when considering fluxes from a
 * Compare differences in residuals in 5m and 20m model runs
 * Calculate mass balance for original CV (mostly channel)
 	* The northern boundary definitely has water flowing northward during the flood period, but is it more balanced than the expanded CV?
+* Plot triangular mesh with cross-section cells used to match interpolated cells
+	* DFM cross-section outputs interpolate over triangular cells, which is not exactly in straight line
+	* Compare these cells it interpolates over with the CV edge for momentum/mass balance calculations to see if they align
