--- a/WeeklyLogs/Log090725_091325.md
+++ b/WeeklyLogs/Log090725_091325.md
@@ -1,13 +1,13 @@
 # September 07 - 13, 2025
 
 ## Summary+takeaways:
-1) Compared mass balance terms with different time model time intervals (5min, 10min, 20min)</br>
-	* Increasing the temporal resolution introduces tiny fluctuations, but reduces the residual in the mass balance</br>
-2) Compared cross-sectional discharge/velocity with interpolated discharge/velocity</br>
-	* Interpolated discharge/velocities are overestimated compared to the DFM output</br>
-	* This translates to the mass flux calculations, which lead to large residuals in the total balance</br>
+1) Compared mass balance terms with different time model time intervals (5min, 10min, 20min)<br>
+	* Increasing the temporal resolution introduces tiny fluctuations, but reduces the residual in the mass balance<br>
+2) Compared cross-sectional discharge/velocity with interpolated discharge/velocity<br>
+	* Interpolated discharge/velocities are overestimated compared to the DFM output<br>
+	* This translates to the mass flux calculations, which lead to large residuals in the total balance<br>
 	* This can then translate to momentum flux calculations in force balance approach and lead to interpolation errors
-3) Include northern/southern boundaries in mass balance </br>
+3) Include northern/southern boundaries in mass balance <br>
 	* This only reduces the residual on December 6, but a spike is still observed prior
 
 * Mass balance document:
