--- a/WeeklyLogs/Log113025_120625.md
+++ b/WeeklyLogs/Log113025_120625.md
@@ -5,6 +5,7 @@
 2) Ran T, D, and TD model for Dec. 2007, Jan. 2021, and Dec. 2015 storms<br>
 * Dec. 2007: storm surge (MET, waves) plays a large role in elevating water levels (>1m at Westport)<br>
 * Jan. 2021: no Montesano gauge to validate; still a >0.5m residual at Westport station<br>
+* Dec. 2015: water levels from TD model on average underestimates USGS water levels at Montesano; also ~1m residual at Westport gauge
 3) Plotted water level (corrected) from pre-deployment sensor (HOBO)<br>
 * Tidal amplification observed across primary tidal constituents at upstream location (M2 = +6.35cm; M4 = +3.4cm; M6 = +4.3cm)<br>
 * NTR at Sasha's sensor (~30km upstream of Tokepoint) shows same NTR trend as Tokepoint, indicating that storm surge influences at least up to that point
@@ -37,20 +38,30 @@ Figure 3: Comparing water levels at Montesano between model runs (T, D, and TD).
 ![Jan2021_westport](../Figures/120425meeting/westport_wl_jan2021.png)<br>
 Figure 4: Comparing water levels at Westport between NOAA gauge and model runs (T, D, and TD) (top). Difference between observed (NOAA) and TD water levels (bottom).
 
+#### Dec. 2015
+* TD model underestimates water levels at USGS Montesano gauge except for at the peak (Fig. 5)
+* Water levels at Westport station is suppressed using the TD model, indicating that MET or waves play a factor (~1m at peak) (Fig. 6)
+
+![Dec2015_montesano](../Figures/120425meeting/montesano_wl_dec2015.png)<br>
+Figure 5: Comparing water levels at Montesano between model runs (T, D, and TD).
+
+![Dec2015_westport](../Figures/120425meeting/westport_wl_dec2015.png)<br>
+Figure 6: Comparing water levels at Westport between NOAA gauge and model runs (T, D, and TD) (top). Difference between observed (NOAA) and TD water levels (bottom).
+
 
 ### 3) October sensor deployment analysis
-* Tidal characteristics are slightly different between Tokepoint and sensor at Sasha's location (~30km upstream) (Fig. 5)
+* Tidal characteristics are slightly different between Tokepoint and sensor at Sasha's location (~30km upstream) (Fig. 7)
 	* 40min lag time (r=0.98)
 	* M2 amplitude increased by 6.35cm and shifted in phase +11 degrees
 	* M4 amplitude increased by ~3.4cm and shifted in phase +46 degrees
 	* M6 amplitude also much greater (+4.3cm)
-* NTR at Sasha's sensor shows same trend as Tokepoint, indicating that storm surge influences water levels up to at least this point (Fig. 6)
+* NTR at Sasha's sensor shows same trend as Tokepoint, indicating that storm surge influences water levels up to at least this point (Fig. 8)
 
 ![SashasSensorTokepoint](../Figures/120425meeting/sashassensor_october2025_wl.png)<br>
-Figure 5: Water levels at Tokepoint (NAVD88) and HOBO sensor (relative depth).
+Figure 7: Water levels at Tokepoint (NAVD88) and HOBO sensor (relative depth).
 
 ![SashasSensorNTR](../Figures/120425meeting/sashassensor_october2025_wl_reconstructed.png)<br>
-Figure 6: Reconstructed water levels for HOBO sensor vs. measured (top). NTR calculated at Sasha's sensor vs. Tokepiont's NTR (bottom). 
+Figure 8: Reconstructed water levels for HOBO sensor vs. measured (top). NTR calculated at Sasha's sensor vs. Tokepiont's NTR (bottom). 
 
 
 ## Next steps:
