--- a/WeeklyLogs/Log113025_120625.md
+++ b/WeeklyLogs/Log113025_120625.md
@@ -69,5 +69,6 @@ Figure 8: Reconstructed water levels for HOBO sensor vs. measured (top). NTR cal
 * Find MET data for Dec. 2007 storm
 	* NCEP/NCAR Reanalysis (NNRP) vs. ERA5 vs. ECMWF?
 	* https://www2.mmm.ucar.edu/wrf/users/download/free_data.html
+* Run Jan. 2021, Dec. 2015, and Dec. 2007(?) with MET data
 
 
