--- a/WeeklyLogs/Log113025_120625.md
+++ b/WeeklyLogs/Log113025_120625.md
@@ -5,7 +5,7 @@
 2) Ran T, D, and TD model for Dec. 2007, Jan. 2021, and Dec. 2015 storms<br>
 * Dec. 2007: storm surge (MET, waves) plays a large role in elevating water levels (>1m at Westport)<br>
 * Jan. 2021: no Montesano gauge to validate; still a >0.5m residual at Westport station<br>
-* Dec. 2015: water levels from TD model on average underestimates USGS water levels at Montesano; also ~1m residual at Westport gauge
+* Dec. 2015: water levels from TD model on average underestimates USGS water levels at Montesano; also ~1m residual at Westport gauge<br>
 3) Plotted water level (corrected) from pre-deployment sensor (HOBO)<br>
 * Tidal amplification observed across primary tidal constituents at upstream location (M2 = +6.35cm; M4 = +3.4cm; M6 = +4.3cm)<br>
 * NTR at Sasha's sensor (~30km upstream of Tokepoint) shows same NTR trend as Tokepoint, indicating that storm surge influences at least up to that point
