--- a/WeeklyLogs/Log120725_121325.md
+++ b/WeeklyLogs/Log120725_121325.md
@@ -1,13 +1,12 @@
 # December 07 - 13, 2025
 
 ## Summary+takeaways:
-1) Jan2015 storm analysis
-* To accurately model the entire Grays Harbor system including the Chehalis River, we need tides, discharge, and MET (TMD) to accurately model upstream and the mouth of the bay
-2) Dec2025 storm forecast
-* Able to predict water levels at Westport, Tokepoint but Montesano water levels could be affected by inaccurate predicted river discharge used for the model; WR01 and WR02 did reasonably well
-3) Dec2007 MET reanalysis
+1) Jan2015 storm analysis<br>
+* To accurately model the entire Grays Harbor system including the Chehalis River, we need tides, discharge, and MET (TMD) to accurately model upstream and the mouth of the bay<br>
+2) Dec2025 storm forecast<br>
+* Able to predict water levels at Westport, Tokepoint but Montesano water levels could be affected by inaccurate predicted river discharge used for the model; WR01 and WR02 did reasonably well<br>
+3) Dec2007 MET reanalysis<br>
 * Found ERA5 reanalysis dataset but super coarse relative to our usual 4km resolution WRF data
-
 
 
 ## Results:
