--- a/WeeklyLogs/Log120725_121325.md
+++ b/WeeklyLogs/Log120725_121325.md
@@ -38,10 +38,10 @@ Figure 2: Comparing water levels at Montesano between USGS gauge and model runs 
 	* Predicted and observed discharge rates differ tremendously, which could have drastically affected the upstream water level response for Montesano (Fig. 4)
 
 ![Dec2025_forecast](../Figures/121125meeting/Dec2025_forecasts_TMD.png)<br>
-Figure 3: Comparing water levels from observed data and forecasted water levels using our TMD model.
+Figure 3: Comparing water levels from observed data and forecasted water levels using our TMD model. Shaded area is using forecasted discharge and MET data.
 
 ![Dec2025_discharge](../Figures/121125meeting/Dec2025_forecasteddischarge.png)<br>
-Figure 4: Showing differences between predicted discharge rates and observed discharge rates at Porter, Satsop, Wynoochee, and Willapa gauges. 
+Figure 4: Showing differences between predicted discharge rates and observed discharge rates at Porter, Satsop, Wynoochee, and Willapa gauges. Shaded area is using forecasted discharge and MET data. 
 
 
 ### 3) Dec2007 reanalysis
