--- a/WeeklyLogs/Log121425_122025.md
+++ b/WeeklyLogs/Log121425_122025.md
@@ -7,16 +7,14 @@
 2) Dec2025 storm post-storm vs. forecast<br>
 * Underpredicted forecasted river discharge rates resulted in lower water levels at Montesano
 
-3) 
-
 
 ## Results:
 ### 1) Dec2015 storm analysis
 * Can use a contribution ratio to define whether the peak water levels for each cell were dominated by inland flooding (discharge) or storm surge (MET) (Fig. 1)
 
-![ContributionRatio_equation](../Figures/121825meeting/ContributionRatio_equation)<br>
+![ContributionRatio_equation](../Figures/121825meeting/ContributionRatio_equation.png)<br>
 
-![ContributionRatio](../Figures/121825meeting/)<br>
+![ContributionRatio](../Figures/121825meeting/Dec2015_contributionratio.png)<br>
 Figure 1: Contribution ratio for December 2015 storm. MET influence (blue) compared with discharge influence (red).
 
 * Nonlinear effect describes where the contribution from the interaction of tides and MET dominate (Nonlinear effect = TMD-TD-TM+T)
@@ -64,4 +62,3 @@ Figure 5: Comparisons between TMD forecast, TMDW forecast, TMD post-storm model,
 
 ## Next steps:
 * Run TMDW post-storm model for December 2025 storm
-* 
