--- a/WeeklyLogs/Log121425_122025.md
+++ b/WeeklyLogs/Log121425_122025.md
@@ -2,7 +2,8 @@
 
 ## Summary+takeaways:
 1) Dec2015 storm analysis<br>
-* Discharge contribution 
+* Discharge contribution shows MET influence further downstream and discharge influence further upstream
+* Nonlinear effect spatial map shows compound flooding area within Grays Harbor
 
 2) Dec2025 storm post-storm vs. forecast<br>
 * Underpredicted forecasted river discharge rates resulted in lower water levels at Montesano
