--- a/WeeklyLogs/Log121425_122025.md
+++ b/WeeklyLogs/Log121425_122025.md
@@ -44,10 +44,13 @@ Figure 3: Discharge ratio between the mouth and upstream Chehalis River.
 ![DischargeRatio_upstream](../Figures/121825meeting/Dec2015_dischargeratio_upstream.png)<br>
 Figure 4: Discharge ratio between Montesano and upstream Chehalis River.
 
+* Interaction index to characterize flow interaction ($mu$)
+	* Ratio index used in Juarez et al. (2022) to quantify interaction of river processes with ocean processes for every 12 hour tidal cycle
+	* 
 
 
 ### 2) Dec2025 storm post-storm vs. forecast
-* Ran TMD (forecast), TMDW (forecast), and TMD (Fig. 5)
+* Ran TMD (forecast), TMDW (forecast), and TMD (Fig. 6)
 * TMD (forecast) and TMDW (forecast) were identical
 * TMD (forecast) and TMD were pretty much the same amongst all locations EXCEPT for Montesano
 	* However, modeled water levels at Montesano were much higher (up to ~1m) when adding in discharge rates post-storm
@@ -59,7 +62,7 @@ Figure 4: Discharge ratio between Montesano and upstream Chehalis River.
 	* WR02: up to 10cm difference
 
 ![Dec2025_modelcomparisons](../Figures/121825meeting/Dec2025_waterlevelcomparisons.png)<br>
-Figure 5: Comparisons between TMD forecast, TMDW forecast, TMD post-storm model, and measured water levels for the December 2025 storm
+Figure 6: Comparisons between TMD forecast, TMDW forecast, TMD post-storm model, and measured water levels for the December 2025 storm
 
 
 ## Next steps:
