--- a/WeeklyLogs/Log121425_122025.md
+++ b/WeeklyLogs/Log121425_122025.md
@@ -4,6 +4,7 @@
 1) Dec2015 storm analysis<br>
 * Discharge contribution shows MET influence further downstream and discharge influence further upstream
 * Nonlinear effect spatial map shows compound flooding area within Grays Harbor
+* Interaction index ($mu$) can describe dominant processes between ocean and river influence 
 
 
 2) Dec2025 storm post-storm vs. forecast<br>
@@ -47,8 +48,8 @@ Figure 4: Discharge ratio between Montesano and upstream Chehalis River.
 * Interaction index to characterize flow interaction ($mu$)
 	* Ratio index used in Juarez et al. (2022) to quantify interaction of river processes with ocean processes for every 12 hour tidal cycle (Fig. 5)
 	* $mu$ = min(u_mouth)/max(u_upstream)
-	* $mu$<0 - ocean dominates
-	* $mu$>0 - river dominates
+	* $mu$ <0 - ocean dominates
+	* $mu$ >0 - river dominates
 	* We can see when comparing both the velocity at the head and Montesano with the mouth that river influence dominates just after December 9th, where water levels become elevated AND damped
 
 ![IndexRatio](../Figures/121825meeting/Dec2015_interactionindex.png)<br>
@@ -73,3 +74,7 @@ Figure 6: Comparisons between TMD forecast, TMDW forecast, TMD post-storm model,
 
 ## Next steps:
 * Run TMDW post-storm model for December 2025 storm
+* December 2015 analysis
+	* I hypothesize that the previous analysis of MET and discharge influence might be better represented if I run:
+		* Tides only with base discharge (September 2015, semi-low flow) to more accurately model influence of increased discharge due to Dec. 2015 storm
+		* Tides+MET with base discharge (September 2015, semi-low flow) to more accurately model influence of increased discharge due to Dec. 2015 storm
